other pages from, table, media img added + menu

--- a/BrunoLuisFinalProject.html
+++ b/BrunoLuisFinalProject.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>Luis Bruno - System Administrator</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
 <!-- <link rel="stylesheet" href="BrunoLuisLastProject.css"> -->
-<link rel="stylesheet" href="w3.css">
+<link rel="stylesheet" href="BrunoLuisFinalProject.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </style>
-<body class="w3-light-grey">
+<script type="text/javascript">
+	function switchImg() {
+		document.getElementById("avatar").src="img/IMG_7552.jpg";
+	}
 
+	function backImg() {
+		document.getElementById("avatar").src="img/Luisme.jpg";
+	}
+
+
+</script>
+</head>
+<body class="w3-light-grey">
+  <!-- ******** MENU *********** -->
+<nav class="nav">
+  <div class="divmenu">
+    <ul class="menu-main">
+      <li class="navli"><a class="navlink" href="BrunoLuisFinalProject.html">Home - About Me</a></li>
+      <li class="navli"><a class="navlink" href="table.html">Table</a></li>
+      <li class="navli"><a class="navlink" href="media.html">Media</a></li>
+      <li class="navli"><a class="navlink" href="Gallery.html">Gallery</a></li>
+      <li class="navli"><a class="navlink" href="form.html">Survey</a></li>
+    </ul>
+  </div>
+</nav>
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
 
@@ -24,7 +48,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="img/Luisme.jpg" style="width:100%" alt="Avatar">
+        	<a class="avatarImg" onmouseover="switchImg()" onmouseout="backImg()">
+          		<img id="avatar" src="img/Luisme.jpg" style="width:100%" alt="Avatar">
+      		</a>
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2>Luis Bruno</h2>
           </div>
@@ -53,7 +79,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <p>HTML,CSS</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">80%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
           </div>
           <br>
 
@@ -81,37 +107,72 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-twothird">
     
       <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Job Description</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>System Administrator / WalMart </b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2018 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <h5 class="w3-opacity"><b>System Administrator </b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>DUTIES:</h6>
+          <p>
+          	<ul>
+          		<li>network monitoring</li>
+          		<li>testing the network for weakness</li>
+          		<li>keeping an eye out for needed updates</li>
+          		<li>installing and implementing security programs</li>
+          		<li>in many cases, E-mail and Internet filters</li>
+          		<li>evaluating implementing network</li>
+          	</ul>
+          	</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Technical Support Engineer / Target</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2017</h6>
-          <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <h5 class="w3-opacity"><b>Network Administrator</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>RESPONSIBILITIES:</h6>
+          <p><ul>
+          	<li>Analyzing system logs and identifying potential issues with computer systems</li>
+          	<li>
+Applying operating system updates, patches, and configuration changes.
+</li>
+          	<li>Installing and configuring new hardware and software.
+</li>
+          	<li>Adding, removing, or updating user account information, resetting passwords, etc.</li>
+          	<li>
+Answering technical queries and assisting users.
+</li>
+          	<li>Responsibility for security.
+</li>
+          	<li>Responsibility for documenting the configuration of the system.
+</li>
+          	<li>Troubleshooting any reported problems.
+</li>
+          	<li>System performance tuning.</li>
+          	<li>
+Ensuring that the network infrastructure is up and running.</li>
+          	<li>
+Configuring, adding, and deleting file systems.</li>
+          	<li>
+Ensuring parity between dev, test and production environments.</li>
+          </ul></p>
+                <cite><a href="https://en.wikipedia.org/wiki/System_administrator" style="color: blue"><i>System Administrator</i></a> by Wikipedia</cite>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Junior IT Engineer / Exxon</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
+          <h5 class="w3-opacity"><b>Expected Salary</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>$75000</h6>
+          <p>Plus year benefits</p><br>
         </div>
       </div>
+
 
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
         <div class="w3-container">	
           <h5 class="w3-opacity"><b>American Military University</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2018 - Current</h6>
-          <p>Web Development! All I need to know in one place</p>
+          <p>HTML, CSS, JavaScript, discipline</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Georgia University</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2018/h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2018</h6>
           <p>Master Degree</p>
           <hr>
         </div>
@@ -119,6 +180,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>School of Georgia</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
           <p>Bachelor Degree</p><br>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Cisco Certification</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2018 - Current</h6>
+          <p><a href="
+        https://www.cisco.com/c/en/us/training-events/training-certifications/certifications.html" target="_blank" style="color: blue"> CCNA - Cisco Certified Network Associate (CCNA) Routing and Switching</p><br>
         </div>
       </div>
 
@@ -139,7 +206,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <p>Powered by Luis Bruno</p>
 </footer>
 
 </body>
