--- a/media.html
+++ b/media.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Luis Bruno - Table of Skills</title>
+	<title>Audio Message - LB</title>
 	<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
@@ -26,8 +26,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     </ul>
   </div>
 </nav>
-
-      <audio controls autoplay="autoplay" src="audio/Welcome1.mp3" id="voice" name="media" class="media">
-
+<div class="dcenter">
+      <audio controls autoplay="autoplay" src="audio/websiteaudio.mp3" id="mycvaudio" name="record1" class="audioclass" style="margin: 0 auto;">
+</div>
 </body>
 </html>
