--- a/BrunoLuisFinalProject.html
+++ b/BrunoLuisFinalProject.html
@@ -110,7 +110,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Job Description</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>System Administrator </b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>DUTIES:</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-sitemap fa-fw w3-margin-right"></i>DUTIES:</h6>
+          <!-- <i class="fas fa-sitemap"></i> -->
+
+
           <p>
           	<ul>
           		<li>network monitoring</li>
@@ -125,7 +128,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Network Administrator</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>RESPONSIBILITIES:</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-address-card fa-fw w3-margin-right"></i>RESPONSIBILITIES:</h6>
           <p><ul>
           	<li>Analyzing system logs and identifying potential issues with computer systems</li>
           	<li>
@@ -156,7 +159,7 @@ Ensuring parity between dev, test and production environments.</li>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Expected Salary</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>$75000</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-dollar-sign fa-fw w3-margin-right"></i>$75000</h6>
           <p>Plus year benefits</p><br>
         </div>
       </div>
