--- a/Gallery.html
+++ b/Gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Luis Bruno - Table of Skills</title>
+	<title>My Gallery</title>
 	<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
@@ -27,8 +27,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   </div>
 </nav>
 <!-- gallery -->
-<img src="img/Happy.jpg" alt="Sysadmin" width="70%" align="center" style="margin: 0 auto"> <br>
+
+<div class="dcenter">
+<img class="padding2" src="img/Happy.jpg" alt="Sysadmin" width="70%" align="center" style="margin: 0 auto"> <br>
+<br>
+<br>
 <img src="img/IT.jpg" alt="Sysadmin" width="50%" align="center" style="margin: 0 auto"><br>
+</div>
 
 </body>
 </html>
