--- a/BrunoLuisFinalProject.html
+++ b/BrunoLuisFinalProject.html
@@ -199,7 +199,7 @@ Ensuring parity between dev, test and production environments.</li>
   </div>
   
   <!-- End Page Container -->
-</div>
+</div><!-- 
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
@@ -211,6 +211,6 @@ Ensuring parity between dev, test and production environments.</li>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
   <p>Powered by Luis Bruno</p>
 </footer>
-
+ -->
 </body>
 </html>
